# dlavigne.github.io

./: .gitignore  README.md
gamelog/: README.md  pom.xml
gamelog/data/: gameTable.json
gamelog/src/main/java/com/rgl/: Main.java  package-info.java
gamelog/src/main/java/com/rgl/gamedata/: GameInfo.java  GameManager.java  package-info.java
gamelog/src/main/java/com/rgl/gamegui/: ButtonsPanel.java  CheckboxesPanel.java  GameManager.java  GameTrackerGUI.java  TextFieldsPanel.java  package-info.java
gamelog/src/main/java/com/rgl/helpers/: FileUtils.java  HtmlOpener.java  ResourceExtractor.java  SimpleHttpServer.java  package-info.java
gamelog/src/main/java/com/rgl/jsonutility/: JsonHandler.java  package-info.java
gamelog/src/main/resources/: index.html  script.js
rgl/: index.html  script.js
rgl/WADomizer/: data.json
rgl/data/: gameTable.json
rgl/gamelog/: script.js
rgl/gamelog/data/: gameTable.json
rlg/: script.js
wadtracker/: api_handler.py  config.py  main.py  pyproject.toml  some_file.json
wadtracker/ui/: wad_catalogue_window.py  wad_item_ui.py  wad_item_ui.ui  wadui.py  wadui.ui
wadtracker/utils/: file_operations.py
wadtrackerlight/: .pre-commit-config.yaml  README.md  __init__.py  api_service.py  data.json  main.py  pyproject.toml  wad_randomizer.py  wadtrackerlight.code-workspace  wadtrackerlight.py  web_scraper.py
wadtrackerlight/ui/: wad_item_ui.py  wad_item_ui.ui  wadui.py  wadui.ui
