[tool.poetry]
name = "wadtracker"
version = "1.0.0"
description = "Tracking Classic DooM WAD I played on Stream"
authors = ["Dominic Lavigne <dominiclavign@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
isort = "5.13.2"
pre-commit = "^4.0.1"
pyinstaller = "^6.11.1"
PySide6 = "^6.8.0.2"
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = ["wadtracker/"]
